# github-ranked

./: .gitignore  .vercelignore  DEVPOST.md  README.md  package.json  pnpm-lock.yaml  vercel.json
ml/: .gitignore  pyproject.toml  ruff.toml
ml/app/: .gitignore  pyproject.toml
ml/app/src/: config.py  main.py
ml/app/src/inference/: __init__.py  transformer.py
ml/app/src/metrics/: performance.py
ml/app/src/unstable/: commits.py
ml/dev/: .gitignore  pyproject.toml
ml/dev/src/core/: config.py
ml/dev/src/models/regression/: data.py  pipeline.py
ml/dev/src/models/transformer/: build.py
ml/legacy/: .gitignore
ml/scoring/: algo.py  motivation.md  scoring.md  test_algo.py  types.py
ml/src/: config.py  regression.py  run.py
ml/src/v0_6/: config.py  github.py  run.py
ml/src/v0_7/core/: git.py
ml/src/v0_7/features/: commit_score.py
ml/src/v0_7/models/: regression.py
prisma/: schema.prisma
src/: routeTree.gen.ts
src/components/: Compare.tsx  Footer.tsx  Header.tsx  RankDistributionChart.tsx  SearchUser.tsx  ThemeToggle.tsx  UserStats.tsx
src/components/ui/: chart.tsx
src/features/dashboard/: DashboardPage.tsx  types.ts
src/features/dashboard/components/: ContributionGraph.tsx  UserIcon.tsx  UserRank.tsx  UserStats.tsx
src/integrations/trpc/: router.ts
src/integrations/trpc/routers/: user.ts  (+1 more)
src/lib/: algo.ts  tiers.ts  types.ts
src/routes/: __root.tsx  index.tsx
src/routes/about/: index.tsx
src/routes/compare/: index.tsx
src/routes/dashboard/: $username.tsx
src/routes/leaderboard/: index.tsx
src/server/routers/: dashboard.ts
(+12 files in other folders)
