[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-quality-app"
version = "1.0.0"
requires-python = ">=3.12, <3.14"
authors = [{ name = "Andrew", email = "hello.andrew.yan@outlook.com" }]

dependencies = [
  "onnxruntime==1.24.3",
  "tokenizers==0.22.2",
  "numpy==2.4.3",
  "scikit-learn==1.8.0",
  "joblib==1.5.3",
  "python-dotenv==1.2.2",
  "requests-toolbelt==1.0.0",
  "gql==4.0.0",
  "pandas==3.0.1",
  "fastapi==0.135.1",
  "uvicorn[standard]==0.37.0",
]

[tool.setuptools.packages.find]
where = ["src"]