[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-quality-dev"
version = "1.0.0"
requires-python = ">=3.12, <3.14"
authors = [{ name = "Andrew", email = "hello.andrew.yan@outlook.com" }]

dependencies = [
  "sentence-transformers==5.3.0",
  "onnxruntime==1.24.3",
  "optimum[onnxruntime]==2.1.0",
  "rich==14.3.3",
  "polars==1.39.0",
  "faiss-cpu==1.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]